--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(7, 7, 31);
 }
 
 main{
@@ -266,6 +267,41 @@ table{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.loading-dialog{
+    background-color: rgb(0, 0, 0, 0.9);
+    z-index: 10;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.loading-img{
+    width: 200px;
+    height: auto;
+    margin-bottom: 24px;
+    animation: rotation 2s infinite linear;
+}
+
+@keyframes rotation {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.loading-text{
+    color: white;
+    font-size: 24px;
 }
 
 .d-none{
